--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-STRIPE_PUBLISHABLE_KEY=your_test_key_here
-STRIPE_SECRET_KEY=your_test_key_here
+STRIPE_PUBLISHABLE_KEY="XXXXXXXXXXXXXXXXX"
+STRIPE_SECRET_KEY="XXXXXXXXXXXXXXXXX"
+USERNAME=XXXX
+PASSWORD=XXXXXXX
